test/types/string/assignToChar/testAssign.2.good
Helpers.chpl:15: In function 'testAssignVal':
Helpers.chpl:17: error: Cannot assign to int(8) from string
  testAssign.chpl:8: called as testAssignVal(strBytes: string, type toType = int(8))
